--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -44,3 +44,11 @@
 [[constraint]]
   name = "github.com/satori/go.uuid"
   version = "1.2.0"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/googollee/go-socket.io"
+
+[[constraint]]
+  name = "github.com/go-chi/chi"
+  version = "3.3.3"
